<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".LoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        >
        <EditText
            android:id="@+id/usernameInput"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:background="@drawable/rounded_input"
            android:paddingLeft="2dp"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textSize="16sp"
            android:drawableStart="@drawable/ic_action_user"
            android:layout_centerHorizontal="true"/>
        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:paddingLeft="2dp"
            android:background="@drawable/rounded_input"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_action_lock"
            android:layout_below="@+id/usernameInput"
            android:layout_alignStart="@+id/usernameInput"/>
        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:id="@+id/loginInput"
            android:layout_below="@id/passwordInput"
            android:layout_centerHorizontal="true"
            android:background="@drawable/login_button"
            android:alpha="0.6"
            >
            <TextView
                android:id="@+id/loginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:text="@string/login"
                android:textSize="20sp"
                android:visibility="visible"
                android:textColor="#fff"
                />
            <ProgressBar
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/loginSpinner"
                android:visibility="gone"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>